# vibe

./: .env.example  .gitignore  .railwayignore  CLAUDE.md  CLI_SETUP.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  NETLIFY_DEPLOYMENT.md  README-OpenRouter.md  README.md  RUNTIME.md  STAGE3_HANDOFF.md  USER_ACCEPTANCE_REPORT.md  build.sh  database.js  deploy-setup.sh  job-manager.js  netlify-build.sh  netlify.toml  netlify_temp.toml  nixpacks.toml  openrouter-client.js  package-lock.json  package.json  quick_start.sh  qwn  railway.toml  rust-toolchain.toml  sample.html  server.js  test_changes.js  test_postgres.js  verify_project.sh
migrations/: 001_initial_schema.pg.sql  001_initial_schema.sql
src/: api.rs  artifacts.rs  db.rs  handlers.rs  lib.rs  main.rs  manager.rs  manager.rs.backup  models.rs  utils.rs  workers.rs
static/: index.html  index_new.html
static/css/: style.css  style_new.css
static/js/: main.js  main_new.js
tests/: integration_tests.rs  stage2_features_test.rs  unit_tests.rs
